# x86-emulator

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  dump.cpp  dump.hpp  handler.cpp  handler.hpp  instruction_fetcher.cpp  instruction_fetcher.hpp  main.cpp  memory.cpp  memory.hpp  modrm.cpp  modrm.hpp  opcode.cpp  opcode.hpp  operand.hpp  parse.cpp  parse.hpp  register.cpp  register.hpp  register_bank.cpp  register_bank.hpp  scanner.cpp  scanner.hpp  sib.cpp  sib.hpp  utils.cpp  utils.hpp
src/opcodes/: adc.cpp  adc.hpp  add.cpp  add.hpp  and.cpp  and.hpp  cmp.cpp  cmp.hpp  dec.cpp  dec.hpp  extension.cpp  extension.hpp  flags.cpp  flags.hpp  imm.cpp  imm.hpp  inc.cpp  inc.hpp  jmp.cpp  jmp.hpp  lea.cpp  lea.hpp  move.cpp  move.hpp  nop.cpp  nop.hpp  opcodes.hpp  or.cpp  or.hpp  pop.cpp  pop.hpp  push.cpp  push.hpp  sbb.cpp  sbb.hpp  shift.cpp  shift.hpp  sub.cpp  sub.hpp  test.cpp  (+5 more)
test/: CMakeLists.txt  adc.cpp  add.cpp  and.cpp  cmp.cpp  dec.cpp  e2e.cpp  flags.cpp  inc.cpp  instruction_fetcher.cpp  jmp.cpp  lea.cpp  mov.cpp  nop.cpp  not.cpp  opcode.cpp  or.cpp  pop.cpp  push.cpp  register_bank.cpp  sbb.cpp  scanner.cpp  shift.cpp  sub.cpp  test_op.cpp  test_utils.hpp  xchg.cpp  xor.cpp
test/res/adc/: adc10.txt  adc11.txt  adc12.txt  adc13.txt  adc15.txt  adc80.txt  adc81.txt  adc83.txt
test/res/add/: add00.txt  add01.txt  add02.txt  add03.txt  add05.txt  add80.txt  add81.txt  add83.txt
test/res/and/: and21.txt  and25.txt  and83.txt
test/res/cmp/: cmp39.txt  cmp3C.txt  cmp3D.txt  cmp83.txt
test/res/dec/: dec48.txt  decFE.txt  (+1 more)
(+87 files in other folders)
